schema/testdata/errors/request_headers_invalid_dot_notation.keel
model Something {
    fields {
        foo Text
    }

    actions {
        create createSomething() with (foo) {
            //expect-error:75:76:AttributeExpressionError:type 'string' does not support field selection
            @permission(expression: something.createdAt == ctx.headers.KEY.KEY2)
        }
    }
}
